# TTSTest

./: .gitignore  README.md  main.py  requirements.txt
OpenAI/: README.md  logging_config.py  pyproject.toml
OpenAI/.posit/publish/: text-to-speech-G0BR.toml
OpenAI/.posit/publish/deployments/: deployment-7T2F.toml
OpenAI/static/js/: main.js
OpenAI/templates/: index.html
mozilla-coqui/: main.py  pyproject.toml  requirements.txt
mozilla-coqui-docker/: docker-compose.yml  main.py  pyproject.toml  requirements.txt
mozilla-coqui/templates/: index.html
piper/: .gitignore  README.md  app.py  download_models.sh  model_downloader.py  pyproject.toml  requirements.txt  test.txt
piper/templates/: index.html
piper/test_files/: ghost_story.txt  test.docx  test.rtf
samples/: test.txt
static/css/: style.css
