[project]
name = "text-to-speech"
version = "0.1.0"
description = "A FastAPI application for text-to-speech using OpenAI API"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.12",
    "jinja2==3.1.6",
    "openai==1.82.0",
    "pydantic==2.11.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "uvicorn==0.34.2",
    "python-docx==1.1.0",
    "PyPDF2==3.0.1",
    "python-magic==0.4.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312" 